--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Home/Twitter</title>
- <link rel="stylesheet" href="/Twitters_homepage_clone/Style.CSS" />
+ <link rel="stylesheet" href="Twitters_homepage_clone/Style.css" />
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
 </head>
 
